fix: u-reveal overflow visible при відкритті для коректних dropdown

--- a/css/utilities/helpers.css
+++ b/css/utilities/helpers.css
@@ -61,6 +61,10 @@
     grid-template-rows: 1fr;
 }
 
+.u-reveal.is-open>* {
+    overflow: visible;
+}
+
 .u-reveal>* {
     overflow: hidden;
 }
